--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.1",
@@ -17,7 +18,6 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "victory": "^36.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
