--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "antd": "^4.20.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "faker": "^5.5.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
