--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "draft-js": "^0.11.7",
     "faker": "^5.5.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-iframe": "^1.8.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
