--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.7.1",
     "faker": "^5.5.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-iframe": "^1.8.0",
