--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
