--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,20 +14,25 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-icons": "^4.10.1",
     "react-iframe": "^1.8.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
