--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@enzoferey/ethers-error-parser": "^0.2.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
     "@infura/sdk": "^2.4.3",
     "@testing-library/jest-dom": "^5.17.0",
