--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
+    "dompurify": "^3.0.6",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "faker": "^5.5.3",
