--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@enzoferey/ethers-error-parser": "^0.2.3",
     "@hookform/resolvers": "^2.9.10",
     "@infura/sdk": "^2.4.3",
+    "@stripe/stripe-js": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
