--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^4.1.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.1.0",
