--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ REACT_APP_BACKEND_BASE_URL="https://api.bitsnft.com"
   REACT_APP_DEEPMOTION_API_URL="https://service.deepmotion.com"
   REACT_APP_DEEPMOTION_CLIENT_ID="jRQYA4bh9HpzkGU4RC7PYv"
   REACT_APP_DEEPMOTION_CLIENT_SECRET="C8EZ2oT4s24HziLPx7kAa"
+
+  # Stripe keys
+  REACT_APP_STRIPE_PUBLIC_KEY=""
