--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.4",
+    "array-move": "^4.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
@@ -26,11 +27,15 @@
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-gesture-responder": "^2.1.0",
+    "react-grid-dnd": "^2.1.2",
     "react-icons": "^4.10.1",
     "react-iframe": "^1.8.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
