--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.15.0",
     "react-timer-hook": "^3.0.5",
     "react-zendesk": "^0.1.13",
     "redux": "^4.2.0",
@@ -54,7 +56,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "npm run format && npm run lint-fix && PORT=8080 react-scripts start",
+    "start": "set PORT=8080 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
