--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
